@@ -1,3 +1,5 @@
+* Manage readonly dates in calendar view
+* Manage editable on calendar view
 * Manage named separator as label
 * Add MultiSelection entry to Dict field
 * Position new record based on order
